--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # requirements.txt
 #dependencies:
-  - snowflake - snowpark - python
-  - streamlit
+- snowflake-snowpark-python
+- streamlit
   #- snowflake - snowpark - python==0.7.0
