--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-# requirements.txt
-#dependencies:
-- snowflake-snowpark-python
-- streamlit
-  #- snowflake - snowpark - python==0.7.0
+
+snowflake-snowpark-python
+streamlit
+#- snowflake-snowpark-python==0.7.0 
